--- a/Sing-up.html
+++ b/Sing-up.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="container my-4">
-        <h2><Sing-up></Sing-up></h2>
+        <h2>Sing-Page</h2>
         <form>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
