--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Solarify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Montserrat Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+
     <!-- Bootstrap v5.1.3 CDNs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -101,6 +107,130 @@
         </div>
       </div>
     </div>
+
+
+    <!-- ----------Sales------------ -->
+    <div class="grid-container">
+
+        <!-- Header -->
+        <header class="header">
+          <div class="menu-icon" onclick="openSidebar()">
+            <span class="material-icons-outlined">menu</span>
+          </div>
+          <div class="header-left">
+            <span class="material-icons-outlined">search</span>
+          </div>
+          <div class="header-right">
+            <span class="material-icons-outlined">notifications</span>
+            <span class="material-icons-outlined">email</span>
+            <span class="material-icons-outlined">account_circle</span>
+          </div>
+        </header>
+        <!-- End Header -->
+  
+        <!-- Sidebar -->
+        <aside id="sidebar">
+          <div class="sidebar-title">
+            <div class="sidebar-brand">
+              <ion-icon name="partly-sunny-outline"></ion-icon> Solarify
+            </div>
+            <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
+          </div>
+  
+          <ul class="sidebar-list">
+            <li class="sidebar-list-item">
+              <a href="#" target="_blank">
+                <span class="material-icons-outlined">dashboard</span> Dashboard
+              </a>
+            </li>
+            <li class="sidebar-list-item">
+              <a href="#" target="_blank">
+                <span class="material-icons-outlined">inventory_2</span> Products
+              </a>
+            </li>
+            <li class="sidebar-list-item">
+              <a href="#" target="_blank">
+                <span class="material-icons-outlined">fact_check</span> Inventory
+              </a>
+            </li>
+            <li class="sidebar-list-item">
+              <a href="#" target="_blank">
+                <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
+              </a>
+            </li>
+            <li class="sidebar-list-item">
+              <a href="#" target="_blank">
+                <span class="material-icons-outlined">shopping_cart</span> Sales Orders
+              </a>
+            </li>
+            <li class="sidebar-list-item">
+              <a href="#" target="_blank">
+                <span class="material-icons-outlined">poll</span> Reports
+              </a>
+            </li>
+            <li class="sidebar-list-item">
+              <a href="#" target="_blank">
+                <span class="material-icons-outlined">settings</span> Settings
+              </a>
+            </li>
+          </ul>
+        </aside>
+        <!-- End Sidebar -->
+  
+        <!-- Main -->
+        <main class="main-container">
+          <div class="main-title">
+            <p class="font-weight-bold">DASHBOARD</p>
+          </div>
+  
+          <div class="main-cards">
+  
+            <div class="card">
+              <div class="card-inner">
+                <p class="text-primary">PRODUCTS</p>
+                <span class="material-icons-outlined text-blue">inventory_2</span>
+              </div>
+              <span class="text-primary font-weight-bold">249</span>
+            </div>
+  
+            <div class="card">
+              <div class="card-inner">
+                <p class="text-primary">PURCHASE ORDERS</p>
+                <span class="material-icons-outlined text-orange">add_shopping_cart</span>
+              </div>
+              <span class="text-primary font-weight-bold">83</span>
+            </div>
+  
+            <div class="card">
+              <div class="card-inner">
+                <p class="text-primary">SALES ORDERS</p>
+                <span class="material-icons-outlined text-green">shopping_cart</span>
+              </div>
+              <span class="text-primary font-weight-bold">79</span>
+            </div>
+  
+            <div class="card">
+              <div class="card-inner">
+                <p class="text-primary">INVENTORY ALERTS</p>
+                <span class="material-icons-outlined text-red">notification_important</span>
+              </div>
+              <span class="text-primary font-weight-bold">56</span>
+            </div>
+  
+          </div>
+  
+          <div class="charts">
+  
+            <div class="charts-card">
+              <p class="chart-title">Purchase and Sales Orders</p>
+              <div id="area-chart"></div>
+            </div>
+  
+          </div>
+        </main>
+        <!-- End Main -->
+  
+      </div>
 
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
