--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <ion-icon name="partly-sunny-outline"></ion-icon>
         Solarify</h2>
       <nav class="navigation">
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="home.html">Home</a>
+        <a href="about.html">About</a>
         <a href="#">Services</a>
         <a href="#">Contact</a>
         <button class="btnLogin-popup">Login</button>
